# ComfyUI-Geowizard

./: .gitignore  README.md  nodes.py  pyproject.toml  requirements.txt
configs/: vae_config.yaml
example/: geowizard_example.json
models/: attention.py  depth_normal_pipeline_clip.py  transformer_2d.py  unet_2d_blocks.py  unet_2d_condition.py
utils/: depth2normal.py
