[project]
name = "comfyui-geowizard"
description = ""
version = "1.0.0"
license = "LICENSE"
dependencies = ["diffusers >= 0.26.0", "numpy >= 1.23.1", "Pillow", "matplotlib>=3.7.5", "scikit-image>=0.18.1", "tqdm >= 4.65.0", "accelerate>=0.28.0", "transformers>=4.39.1"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-Geowizard"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Geowizard"
Icon = ""
